--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.6.0",
+    "react-native-iphone-x-helper": "^1.2.1",
+    "react-native-qrcode-svg": "^6.0.3",
+    "react-native-svg": "^11.0.1",
+    "react-native-vector-icons": "^6.6.0",
+    "react-native-webview": "^8.1.2",
     "react-navigation": "^4.2.2",
     "reactotron-react-native": "^4.0.3",
     "styled-components": "^5.0.1"
